<resources>
    <string name="app_name">Dutify</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterCredentials">Enter your\ncredentials</string>
    <string name="workDoneToday">let\'s get this work done today</string>
    <string name="dutifyQuote">Dutify - get the work flowing</string>
    <string name="signInGoogle">Sign In with Google</string>
    <string name="passwordHint">Password</string>
    <string name="emailHint">Email</string>
    <string name="welcomeUser">welcomeUser</string>
    <string name="dayHour">Monday, 8.15am</string>
    <string name="monthDay">november 28th</string>
    <string name="enterCompany">Enter FiftyFive</string>
    <string name="contactAdministrators">Contact Administrators</string>
    <string name="userImageDescription">userImageDescription</string>
    <string name="arrowImageDescription">arrowImageDescription</string>
    <string name="profileNav">Profile</string>
    <string name="calendarNav">Calendar</string>
    <string name="dashboardNav">Dashboard</string>
    <string name="awardsNav">Awards</string>
    <string name="profileUserName">Gary Vee</string>
    <string name="profileCategory">Front-end</string>
    <string name="profileDescTitle">Description</string>
    <string name="descriptionProfileEx">Gary Vaynerchuk is the chairman of VaynerX, a modern-day media and communications holding company and the active CEO of VaynerMedia, a full-service advertising agency servicing Fortune 100 clients across the company’s 4 locations.</string>
    <string name="phoneNumberEx">(+5) 215-450-0859</string>
    <string name="recentProjProfileTitle">Recent Projects</string>
    <string name="getInTouch">Get In Touch</string>
    <string name="profileEmail">garyvee@veynermedia.com</string>
    <string name="websiteProfile">www.garyvee.com</string>
    <string name="projectTileProfile">Shimo Hills</string>
    <string name="projectCategoryProfile">Front-End</string>
    <string name="tasksStatisticsTitle">Tasks Statistics</string>
    <string name="numberTasks">30</string>
    <string name="logo_for_the_quote">Logo For the Quote</string>
    <string name="errorPageHeader">Ups, something\nwent wrong 😪...</string>
    <string name="errorCalendarParagraph">Go to Calendar</string>
    <string name="errorDashboardParagraph">Go to Dashboard</string>
    <string name="errorAwardsParagraph">Go to Awards</string>
    <string name="errorProfileParagraph">Go to Profile</string>
    <string name="timelineProjectHeader">Timeline</string>
    <string name="timeLeft">29 days left.</string>
    <string name="projectStatus">Under development</string>
    <string name="teamProjectHeader">Team</string>
    <string name="actionsProjectHeader">Actions</string>
    <string name="taskChatBtn">Task Chat</string>
    <string name="BtnPersonalTasksText">Personal Tasks</string>
    <string name="allTasksBtnText">All Tasks</string>
    <string name="workTasksBtnText">Work Tasks</string>
    <string name="letsGetItText">Let\'s get it!</string>
    <string name="makeYourDayCount">Make your day count ⚡.</string>
    <string name="addPersonalTaskBtnLabelText">Add Personal Task</string>
    <string name="forTodayDayLabelText">For today\'s day:</string>
    <string name="PersonalTaksNameHintLabel">Personal Task Name</string>
    <string name="PersonalTaskDescriptionHintLabel">Personal Task Description</string>
    <string name="endingDateLabelHint">Ending Date</string>
    <string name="startingDateLabelHintTxt">Starting Date</string>
    <string name="anything_you_may_need">Anything you may need,,</string>
    <string name="we_are_here_for_you">we are here for you.</string>
    <string name="another_day">Another day,</string>
    <string name="another_grind">another grind.</string>
    <string name="hi">👋 Hi,&#160;</string>
    <string name="dashboard_hello">Hello,</string>
    <string name="project_desc_name">Climb Hill</string>
    <string name="submit_form_button">SUBMIT</string>
    <string name="glad_to_see_you_here">Glad to see you here! 🥳</string>
    <string name="awesome">Awesome!</string>
    <string name="tasksUnderDevelopmentTxt">Tasks Under Development</string>
    <string name="tasksNotCompletedTxt">Tasks Not Completed</string>
    <string name="totalTasksTxt">Total Tasks</string>
    <string name="awardPictureHolder">Award Picture Holder</string>
    <string name="awards_statistics">Awards Statistics</string>
    <string name="duties_top_navbar">Duties</string>
    <string name="task_ending">&#160;task ends here!</string>
    <string name="are_you_sure_you_want_to">Are you sure you want to</string>
    <string name="purchase_a">purchase this product</string>
    <string name="for_duties">for duties?</string>
    <string name="buy">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="icon_done">icon_done</string>
    <string name="fresh_update">Fresh update? 😎</string>
    <string name="dutify">DUTIFY</string>
    <string name="todo_loading">TODO</string>
    <string name="fill_inputs">Please fill all the inputs</string>
    <string name="admin_pages">Administration dashboard is underdevelopment</string>
</resources>