<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_calendar_nav"
        android:title="@string/calendarNav"/>
    <item
        android:id="@+id/nav_dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard_nav"
        android:title="@string/dashboardNav"/>
    <item
        android:id="@+id/nav_awards"
        android:enabled="true"
        android:icon="@drawable/ic_awards_nav"
        android:title="@string/awardsNav"/>
    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_user_nav"
        android:title="@string/profileNav"/>
</menu>