<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="20dp"
    android:paddingRight="30dp"
    android:paddingBottom="20dp"
    tools:context=".Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/errorPageHeader"
        android:textColor="@color/pTextColor5"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:drawablePadding="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/errorCalendarParagraph"
        android:textColor="@color/calendarColor"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_calendar_purple" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawablePadding="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/errorDashboardParagraph"
        android:textColor="@color/mobileDev"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_dashboard_green" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawablePadding="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/errorAwardsParagraph"
        android:textColor="@color/awardsErrorColor"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_awards_red" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawablePadding="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/errorProfileParagraph"
        android:textColor="@color/profileColor"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_user_blue" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal">

        <fragment
            android:id="@+id/asd"
            android:name="com.example.dutify.QuoteDutify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            tools:layout="@layout/fragment_quote_dutify" />

    </RelativeLayout>

</LinearLayout>