<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="40dp"
    android:paddingBottom="20dp"
    tools:context=".Welcome">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/img"
        android:contentDescription="@string/userImageDescription" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/welcomeUser"
        android:textColor="@color/pTextColor5"
        android:textFontWeight="500"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="23dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/arrowImageDescription"
        android:src="@drawable/ic_arrow" />

    <TextView
        android:id="@+id/ballOne"
        android:layout_width="2dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:background="@drawable/circle_shape" />

    <TextView
        android:id="@+id/ballTwo"
        android:layout_width="2dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:background="@drawable/circle_shape" />

    <TextView
        android:id="@+id/ballThree"
        android:layout_width="2dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:background="@drawable/circle_shape" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/dayHour"
        android:textColor="@color/pTextColor5"
        android:textFontWeight="500"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/monthDay"
        android:textColor="@color/pTextColor4"
        android:textFontWeight="500"
        android:textSize="15sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enterCompanyButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="54dp"
        android:backgroundTint="#fff"
        android:paddingLeft="32dp"
        android:paddingTop="11dp"
        android:paddingRight="32dp"
        android:paddingBottom="11dp"
        android:text="@string/enterCompany"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textFontWeight="600"
        android:textSize="16sp"
        app:cornerRadius="50dp"
        app:strokeColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/contactAdministrators"
        android:textColor="@color/pTextColor5"
        android:textFontWeight="400"
        android:textSize="13sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal">

        <fragment
            android:id="@+id/asd"
            android:name="com.example.dutify.QuoteDutify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            tools:layout="@layout/fragment_quote_dutify" />

    </RelativeLayout>

</LinearLayout>