<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingBottom="20dp"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/enterCredentials"
        android:textColor="@color/pTextColor5"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/workDoneToday"
        android:textColor="@color/pTextColor3"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/form_stroke"
        android:hint="@string/emailHint"
        android:textColorHint="@color/pTextColor4"
        app:boxStrokeColor="@color/pTextColor5"
        app:boxStrokeWidthFocused="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/poppins"
            android:textColor="@color/pTextColor5"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form_stroke"
        android:hint="@string/passwordHint"
        android:textColorHint="@color/pTextColor4"
        app:boxStrokeColor="@color/pTextColor5"
        app:boxStrokeWidthFocused="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword"
            android:textColor="@color/pTextColor5"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/signInGoogle"
        android:textColor="@color/pTextColor5"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_google" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="end"
        android:layout_marginTop="40dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:onClick="loginFunction"
        android:padding="0dp"
        android:rotation="180"
        app:icon="@drawable/abc_vector_test"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:shapeAppearanceOverlay="@style/Button.Circle"
        app:strokeColor="@color/pTextColor5"
        app:strokeWidth="1.5dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal">

        <fragment
            android:id="@+id/asd"
            android:name="com.example.dutify.QuoteDutify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            tools:layout="@layout/fragment_quote_dutify" />

    </RelativeLayout>

</LinearLayout>